@@ -41,7 +41,7 @@ console.noOCSPURL                     = OCSP server URL not found in Certificate
 console.processing                    = Processing (it may take a while) ...
 console.readingCRLs                   = Reading CRLs
 console.readingOCSP                   = Getting OCSP data from URL: {0}
-console.setAcro6Layers                = Setting Acro6 layers
+console.setAcro6Layers                = Use only layers recommend by Acrobat 6: {0}
 console.setCertificationLevel         = Setting certification level
 console.setContact                    = Setting contact: {0}
 console.setEncryption                 = Setting encryption
@@ -134,6 +134,7 @@ gui.tsaOcsp.button                    = TSA/OCSP/CRL\u0009
 gui.valueNotFilled.error              = {0} has to be filled.
 gui.visibleSignature.checkbox         = Visible signature
 gui.visibleSignatureSettings.button   = Settings
+gui.vs.acro6layers.checkbox           = Acrobat 6 layer mode
 gui.vs.bgImgPath.label                = Background image
 gui.vs.bgImgScale.label               = Background image scale
 gui.vs.bgImgScale.tooltip             = Insert positive value to multiply image size with the value.\r\nInsert zero value to fill whole background with it (stretch).\r\nInsert negative value to best fit resize.
@@ -165,6 +166,7 @@ hlp.bgPath             = background image path for visible signatures
 hlp.bgScale            = background image scale for visible signatures. Insert positive value to multiply image size with the value. Insert zero value to fill whole background with it (stretch). Insert negative value to best fit resize.
 hlp.certLevel          = level of certification. Default value is NOT_CERTIFIED. Available values are {0}
 hlp.crl                = enable CRL certificate validation
+hlp.disableAcro6Layers = disables the Acrobat 6 layer mode i.e. all signature layers will be created. Acrobat 6.0 and higher recommends that only layer n2 and n4 be present.
 hlp.disableAnnot       = deny modify annotations in encrypted documents
 hlp.disableAssembly    = deny assembly in encrypted documents
 hlp.disableContent     = deny modify content in encrypted documents
