@@ -42,7 +42,7 @@ console.noOCSPURL                     = Adresa OCSP serveru v certifik\u00E1tu n
 console.processing                    = Zpracov\u00E1v\u00E1m (m\u016F\u017Ee to chv\u00EDli zabrat) ...
 console.readingCRLs                   = Na\u010D\u00EDt\u00E1n\u00ED seznamu CRL
 console.readingOCSP                   = Z\u00EDsk\u00E1v\u00E1n\u00ED OCSP dat z URL: {0}
-console.setAcro6Layers                = Nastavuji vrstvy Acro6
+console.setAcro6Layers                = Pou\u017Eit\u00ED pouze vrstev doporu\u010Den\u00FDch v Acrobatu 6: {0}
 console.setCertificationLevel         = Nastavuji \u00FArove\u0148 certifikace
 console.setContact                    = Natavuji kontakt: {0}
 console.setEncryption                 = Nastavuji zabezpe\u010Den\u00ED (k\u00F3dov\u00E1n\u00ED).
@@ -132,6 +132,7 @@ gui.tsa.user.label                    = TSA login
 gui.valueNotFilled.error              = V poli "{0}" mus\u00ED b\u00FDt vypln\u011Bna hodnota.
 gui.visibleSignature.checkbox         = Viditeln\u00FD podpis
 gui.visibleSignatureSettings.button   = Nastaven\u00ED
+gui.vs.acro6layers.checkbox           = Pouze vrstvy doporu\u010Den\u00E9 v Acrobat 6
 gui.vs.bgImgPath.label                = Obr\u00E1zek na pozad\u00ED
 gui.vs.bgImgScale.label               = M\u011B\u0159itko obr\u00E1zku na pozad\u00ED
 gui.vs.bgImgScale.tooltip             = Jako hodnotu m\u011B\u0159\u00EDtka m\u016F\u017Eete pou\u017E\u00EDt jednu z n\u00E1sleduj\u00EDc\u00EDch variant (pro odd\u011Blen\u00ED desetin\u00FDch m\u00EDst pou\u017E\u00EDvejte te\u010Dku):\r\n1) Kladn\u00E9 \u010D\u00EDslo - n\u00E1sobek tohoto \u010D\u00EDsla bude pou\u017Eit k vyn\u00E1soben\u00ED p\u016Fvodn\u00ED velikosti obr\u00E1zku. (nap\u0159. pro zmen\u0161en\u00ED na polovinu zadejte 0.5)\r\n2) Nula - velikost obr\u00E1zku bude zm\u011Bn\u011Bna tak aby vyplnil cel\u00E9 pozad\u00ED podpisu\r\n3) Z\u00E1porn\u00E9 \u010D\u00EDslo - velikost obr\u00E1zku bude zm\u011Bn\u011Bna tak, aby pom\u011Br stran z\u016Fstal zachov\u00E1n a aby co nejl\u00E9pe vyplnil pozad\u00ED (best fit)
@@ -163,6 +164,7 @@ hlp.bgPath             = cesta k souboru s obr\u00E1zkem na pozad\u00ED viditeln
 hlp.bgScale            = pom\u011Br zv\u011Bt\u0161en\u00ED pro obr\u00E1zek na pozad\u00ED viditeln\u00E9ho podpisu. Mo\u017Enosti: Kladn\u00E9 \u010D\u00EDslo - n\u00E1sobek tohoto \u010D\u00EDsla bude pou\u017Eit k vyn\u00E1soben\u00ED p\u016Fvodn\u00ED velikosti obr\u00E1zku. (nap\u0159. pro zmen\u0161en\u00ED na polovinu zadejte 0.5). Nula - velikost obr\u00E1zku bude zm\u011Bn\u011Bna tak aby vyplnil cel\u00E9 pozad\u00ED podpisu. Z\u00E1porn\u00E9 \u010D\u00EDslo - velikost obr\u00E1zku bude zm\u011Bn\u011Bna tak, aby pom\u011Br stran z\u016Fstal zachov\u00E1n a aby co nejl\u00E9pe vyplnil pozad\u00ED (best fit).
 hlp.certLevel          = \u00FArove\u0148 certifikace. V\u00FDchoz\u00ED hodnota je NOT_CERTIFIED. Mo\u017En\u00E9 hodnoty: {0}
 hlp.crl                = povoluje CRL validaci certifik\u00E1tu
+hlp.disableAcro6Layers = vyp\u00EDn\u00E1 nastaven\u00ED vrstev z Acrobatu 6, to znamen\u00E1, \u017Ee v\u0161echny vrstvy podpisu budou vytvo\u0159eny. Acrobat 6.0 a vy\u0161\u0161\u00ED doporu\u010Duj\u00ED vytvo\u0159it pouze vrstvy podpisu n2 a n4.
 hlp.disableAnnot       = zak\u00E1\u017Ee \u00FApravu anotac\u00ED u k\u00F3dovan\u00FDch dokument\u016F
 hlp.disableAssembly    = zak\u00E1\u017Ee sestaven\u00ED (assembly) u k\u00F3dovan\u00FDch dokument\u016F
 hlp.disableContent     = zak\u00E1\u017Ee \u00FApravu obsahu u k\u00F3dovan\u00FDch dokument\u016F
