@@ -20,7 +20,7 @@ console.getPrivateKey         = Lade privaten Schl\u00FCssel
 console.loadKeystore          = Lade Schl\u00FCsselbund: {0}
 console.memoryError           = \r\nJava hat zu wenig Arbeitsspeicher. Versuchen Sie der JVM mehr Speicher zuzuteilen.\r\nF\u00FCgen Sie -Xmx<Speichergr\u00E4\u00DFe> an den Java Aufruf.\r\nz.B.: $java -Xmx512m  ... setzt die maximale Java Heap Gr\u00F6\u00DFe auf 512MB.\r\n
 console.processing            = Bearbeite (es kann ein wenig l\u00E4nger dauern) ...
-console.setAcro6Layers        = Setze Acro6 Ebenen
+console.setAcro6Layers        = Verwendung  nur die Acrobat 6 empfehlen Ebenen: {0}
 console.setCertificationLevel = Setze Zertifizierungsstufe
 console.setContact            = Setze Kontakt: {0}
 console.setEncryption         = Setze Verschl\u00FCsselung
